# llm-spatial-reasoning-tests

./: Cargo.toml  README.md  flake.nix  prompts.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cargo-build.yml  cargo-clippy.yml  cargo-test.yml  rustfmt.yml
results/: prompt_01.md  prompt_01.txt  prompt_02.md  prompt_03.md  prompt_04.md  prompt_05.md  prompt_06.md  prompt_07.md  prompt_08.md  prompt_09.md  prompt_10.md  prompt_11.md  prompt_12.md  prompt_13.md  prompt_14.md  prompt_15.md  prompt_16.md  prompt_17.md  prompt_18.md  prompt_19.md  prompt_20.md  prompt_21.md  prompt_22.md  prompt_23.md  prompt_24.md  prompt_25.md  prompt_26.md  prompt_27.md  prompt_28.md  prompt_29.md  prompt_30.md  prompt_31.md  prompt_32.md  prompt_33.md  prompt_34.md  prompt_35.md  prompt_36.md  prompt_37.md  prompt_38.md  prompt_39.md  (+21 more)
src/: main.rs
