[package]
name = "llm-spatial-reasoning-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow      = "1"
async-openai = { version = "0.33.0", features = ["byot"] }
async-trait = "0.1.89"
clap = { version = "4.5.60", features = ["derive", "env"] }
format_serde_error = "0.3.0"
futures = "0.3.32"
reqwest     = { version = "0.13", features = ["json","stream"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
toml = "1.0.3"
